--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
-    "typescript": "5.4.5"
+    "typescript": "^4.9.5"
   }
 }
