--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.2.5",
     "typescript": "^4.9.5"
   }
