--- a/package.json
+++ b/package.json
@@ -7,20 +7,11 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
-    "nth-check": "2.0.1",
-    "postcss": "^8.4.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-  },
-  "resolutions": {
-    "postcss": "^8.4.31",
-    "nth-check": "^2.0.1",
-    "svgo": "^2.8.0",
-    "css-select": "^4.1.3",
-    "resolve-url-loader": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
