--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
         run: npm run lint
 
       - name: Check Prettier formatting
-        run: npm run format:check --loglevel warn
+        run: npm run format:check
 
       - name: Run Node.js tests
         run: npm test
@@ -45,17 +45,17 @@ jobs:
         with:
           go-version: '1.18'
 
-      - name: Change directory to backend
-        run: cd backend
-
       - name: Install Go dependencies
         run: go mod tidy
+        working-directory: ./backend
 
       - name: Install golangci-lint
         run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 
       - name: Run Go Linter
         run: golangci-lint run
+        working-directory: ./backend
 
       - name: Run Go tests
         run: go test -v ./...
+        working-directory: ./backend
