--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
+    "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
     "typescript": "^4.9.5"
   }
 }
