--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,35 +27,8 @@ jobs:
       - name: Run Node.js Lint
         run: npm run lint
 
-      - name: Check Prettier formatting
-        run: npm run format:check
+      # - name: Check Prettier formatting
+      #   run: npm run format:check
 
       - name: Run Node.js tests
         run: npm test
-
-  backend:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.21'
-
-      - name: Install Go dependencies
-        run: go mod tidy
-        working-directory: ./backend
-
-      - name: Install golangci-lint
-        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-
-      - name: Run Go Linter
-        run: golangci-lint run
-        working-directory: ./backend
-
-      - name: Run Go tests
-        run: go test -v ./...
-        working-directory: ./backend
