--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "start": "bun run react-scripts start",
+    "build": "bun run react-scripts build",
+    "test": "bun run react-scripts test",
+    "eject": "bun run react-scripts eject",
+    "lint": "bun run eslint 'src/**/*.{ts,tsx}'",
+    "format": "bun run prettier --write .",
+    "format:check": "bun run prettier --check ."
   },
   "eslintConfig": {
     "extends": [
